增加数据库文件

--- a/SHoppMVC/SHoppMVC.csproj
+++ b/SHoppMVC/SHoppMVC.csproj
@@ -481,6 +481,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
     <Content Include="Areas\Admin\Views\AdminLogin\ZsMain.cshtml" />
+    <Content Include="Data\Shop.bak" />
     <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
